# SkillBridge

./: .env.example  .gitignore  .replit  README.md  backend_guild.md  backend_todo.md  backend_todo2.md  design_guidelines.md  frontend_todo.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/: index.html  package-lock.json  package.json  vite.config.ts
client/e2e/: user-journey.spec.ts
client/public/: manifest.json
client/src/: App.tsx  index.css
client/src/components/: Hero.tsx  (+17 more)
public/: manifest.json
server/: replitAuth.ts  routes.js  routes.ts  storage.ts
shared/: schema.ts
skillbridge_backend/: .env.example  .gitignore  Dockerfile  README.md  backend_expectation.md  backend_todo3.md  conftest.py  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt
skillbridge_backend/badges/: apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
skillbridge_backend/docs/: README.md  api-documentation.md  deployment-guide.md
skillbridge_backend/forum/: apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
skillbridge_backend/integrations/: __init__.py  calendly.py  learning_platforms.py  manager.py  tests.py  youtube.py
skillbridge_backend/matches/: apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
skillbridge_rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
skillbridge_rust/src/: handlers.rs  main.rs  matching.rs  models.rs
(+111 files in other folders)
